--- a/horarios-estilos.css
+++ b/horarios-estilos.css
@@ -1,8 +1,7 @@
 /* CSS DE HORARIOS Y TABLA */
 
 .dias {
-    font-weight: bold;
-    color: blue;
+    color: black;
     font-size: 20px;
 }
 
@@ -10,10 +9,15 @@
     font-style: italic;
 }
 
+
 table {
+    margin-left: auto;
+    margin-right: auto;
     border-collapse: collapse;
     width: 50%;
     margin-top: 20px;
+    margin-bottom: 100px;
+
 }
 
 th, td {
@@ -26,4 +30,12 @@ th {
     background-color: lightgray;
 }
 
-/* Termina horarios */
+h2 {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.horariosPdf {
+    text-align: center;
+    margin-bottom: 30px;
+}
