--- a/styles.css
+++ b/styles.css
@@ -56,10 +56,7 @@ body {
     margin-top: 30px;
 }
 
-.card-title {
-    text-align: center;
-}
-
+.card-title,
 .card-text {
     text-align: center;
 }
@@ -85,6 +82,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 20px;
+    margin-top: 100px;
 }
 
 .social-icons {
@@ -127,4 +125,20 @@ footer {
     margin-top: 20px;
 }
 
+.containerIngresa {
+    margin-top: 8px;
+}
 
+#ingresar {
+    background-color: #007bff;
+    color: white;
+    border-radius: 40px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+#ingresar:hover {
+    background-color: #0056b3;
+    color: #fff;
+}
